typescript/checker/tests/conformance/types/stringLiteral/stringLiteralTypesWithTemplateStrings02.ts.stderr
error: AssignFailed {
    span: Span {
        lo: BytePos(
            127,
        ),
        hi: BytePos(
            151,
        ),
        ctxt: #0,
    },
    left: Lit(
        TsLitType {
            span: Span {
                lo: BytePos(
                    132,
                ),
                hi: BytePos(
                    141,
                ),
                ctxt: #0,
            },
            lit: Str(
                Str {
                    span: Span {
                        lo: BytePos(
                            132,
                        ),
                        hi: BytePos(
                            141,
                        ),
                        ctxt: #0,
                    },
                    value: Atom('AB
                    C' type=inline),
                    has_escape: true,
                },
            ),
        },
    ),
    right: Keyword(
        TsKeywordType {
            span: Span {
                lo: BytePos(
                    144,
                ),
                hi: BytePos(
                    151,
                ),
                ctxt: #0,
            },
            kind: TsStringKeyword,
        },
    ),
    cause: [],
}
 --> $DIR/tests/conformance/types/stringLiteral/stringLiteralTypesWithTemplateStrings02.ts:3:5
  |
3 |   let abc: "AB\r\nC" = `AB
  |  _____^
4 | | C`;
  | |__^

error: AssignFailed {
    span: Span {
        lo: BytePos(
            158,
        ),
        hi: BytePos(
            194,
        ),
        ctxt: #0,
    },
    left: Lit(
        TsLitType {
            span: Span {
                lo: BytePos(
                    172,
                ),
                hi: BytePos(
                    179,
                ),
                ctxt: #0,
            },
            lit: Str(
                Str {
                    span: Span {
                        lo: BytePos(
                            172,
                        ),
                        hi: BytePos(
                            179,
                        ),
                        ctxt: #0,
                    },
                    value: Atom('DE
                    F' type=inline),
                    has_escape: true,
                },
            ),
        },
    ),
    right: Keyword(
        TsKeywordType {
            span: Span {
                lo: BytePos(
                    182,
                ),
                hi: BytePos(
                    194,
                ),
                ctxt: #0,
            },
            kind: TsStringKeyword,
        },
    ),
    cause: [],
}
 --> $DIR/tests/conformance/types/stringLiteral/stringLiteralTypesWithTemplateStrings02.ts:5:5
  |
5 | let de_NEWLINE_f: "DE\nF" = `DE${"\n"}F`;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

